--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,5 +31,8 @@ jobs:
       - name: Install dependencies
         run: |
            composer update --prefer-dist --no-interaction --no-progress
+      - name: Setup Laravel
+        run: |
+           php artisan key:generate
       - name: Execute tests
-        run: vendor/bin/phpunit --verbose
+        run: php artisan serve
