--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.0, 8.1]
+        php: [8.1]
         laravel: [^8.0]
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
@@ -33,6 +33,8 @@ jobs:
            composer update --prefer-dist --no-interaction --no-progress
       - name: Setup Laravel
         run: |
+           cp .env.example .env
            php artisan key:generate
+           
       - name: Execute tests
-        run: php artisan serve
+        run: php artisan test
