--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,21 +14,21 @@ jobs:
         php: [8.1]
         laravel: [^8.0]
 
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_DATABASE: jigear_testing
+        ports:
+          - 3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Setup Mysql
-        uses: mirromutth/mysql-action@v1.1
-        with: 
-          character set server: utf8mb4,
-          collation server: utf8mb4_unicode_ci
-          mysql database: jigear
-          mysql root password: 
-          mysql user: root
-          mysql password:
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
