--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,21 +14,20 @@ jobs:
         php: [8.1]
         laravel: [^8.0]
 
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_DATABASE: jigear_testing
-        ports:
-          - 3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Shutdown Ubuntu MySQL (SUDO)
+        run: sudo service mysql stop
+
+      - name: Set up MySQL
+        uses: mirromutth/mysql-action@v1.1
+        with:
+          mysql database: jigear_testing
+          mysql root password: ''
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
