--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
       mysql:
         image: mysql:5.7
         env:
-          MYSQL_DATABASE: jigear_testing
+          MYSQL_DATABASE: jigear
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
         ports:
           - 3306
