--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,12 +8,6 @@ jobs:
   tests:
     runs-on: ubuntu-20.04
 
-    strategy:
-      fail-fast: true
-      matrix:
-        php: [8.1]
-        laravel: [^8.0]
-
     services:
       mysql:
         image: mysql:5.7
@@ -23,6 +17,12 @@ jobs:
         ports:
           - 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
+    strategy:
+      fail-fast: true
+      matrix:
+        php: [8.1]
+        laravel: [^8.0]
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
@@ -37,6 +37,9 @@ jobs:
           extensions: dom, curl, libxml, mbstring, zip
           tools: composer:v2
           coverage: none
+      
+      - name: Start mysql service
+        run: sudo systemctl start mysql
 
       - name: Install dependencies
         run: |
