--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
-    "/admin/css/app.css": "/admin/css/app.css",
+    "/css/admin/app.css": "/css/admin/app.css",
     "/css/app.css": "/css/app.css"
 }
