--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/admin/app.js": "/js/admin/app.js",
+    "/js/admin/pages/auth/login.js": "/js/admin/pages/auth/login.js",
     "/css/admin/app.css": "/css/admin/app.css",
     "/css/app.css": "/css/app.css"
 }
