--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.5",
         "tailwindcss": "^3.0.17"
+    },
+    "dependencies": {
+        "turbolinks": "^5.2.0"
     }
 }
