--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
     "/js/admin/app.js": "/js/admin/app.js",
-    "/js/admin/pages/auth/login.js": "/js/admin/pages/auth/login.js",
-    "/js/admin/pages/catalog/create.js": "/js/admin/pages/catalog/create.js",
+    "/js/swipe.js": "/js/swipe.js",
     "/css/admin/app.css": "/css/admin/app.css",
+    "/css/swipe.css": "/css/swipe.css",
     "/css/app.css": "/css/app.css"
 }
