--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,6 @@
     "/js/admin/app.js": "/js/admin/app.js",
     "/js/swipe.js": "/js/swipe.js",
     "/css/admin/app.css": "/css/admin/app.css",
-    "/css/swipe.css": "/css/swipe.css",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/swipe.css": "/css/swipe.css"
 }
